--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,11 @@
     </footer>
 
 </body>
+<script>
+    (async function() {
+        const { text } = await( await fetch(`/api/message`)).json();
+        document.querySelector('#name').textContent = text;
+    }());
+    </script>
 
 </html>
