--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 </body>
 <script>
     (async function() {
-        const { text } = await( await fetch(`/api/message`)).json();
+        const { text } = await( await fetch(`/api/cars`)).json();
         document.querySelector('#name').textContent = text;
     }());
     </script>
