--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,12 @@
 <script>
     (async function() {
         const { text } = await( await fetch(`/api/cars`)).json();
-        document.querySelector('#name').textContent = text;
+        
+    }());
+
+    (async function() {
+        const { text } = await( await fetch(`/api/message`)).json();
+        
     }());
     </script>
 
